fixed header sub overlap

--- a/styles/main.css
+++ b/styles/main.css
@@ -74,6 +74,7 @@ h2 {
   padding: 10px 10px 30px 10px;
   font-weight: bold;
   font-size: 14pt;
+  line-height: 2;
 }
 
 .header h1 {
@@ -204,7 +205,7 @@ h2 {
   flex: 6;
 }
 
-@media screen and (max-width: 720px) {
+@media (max-width: 720px) {
   .why img {
     display: none;
   }
